--- a/404.html
+++ b/404.html
@@ -1,13 +1,24 @@
 ---
-layout: page
-title: Page Not Found
+layout: default
 ---
 
-<div class="site-404">
-  <div class="site-404-icon">
-    {% svgicon 404 %}
-  </div>
-  <div class="site-404-title">
-    {% localize page_not_found %}
-  </div>
+<style type="text/css" media="screen">
+  .container {
+    margin: 10px auto;
+    max-width: 600px;
+    text-align: center;
+  }
+  h1 {
+    margin: 30px 0;
+    font-size: 4em;
+    line-height: 1;
+    letter-spacing: -1px;
+  }
+</style>
+
+<div class="container">
+  <h1>404</h1>
+
+  <p><strong>Page not found :(</strong></p>
+  <p>The requested page could not be found.</p>
 </div>
