--- a/404.html
+++ b/404.html
@@ -1,24 +1,11 @@
 ---
-layout: default
+layout: page
+title: "404 Page Not Found"
+permalink: 404.html
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<h4>The page you were looking for is not found.</h4>
+<p>Sorry, we've misplaced that URL or it's pointing to something that doesn't 
+exist. Please 
+<a href="{{ '' | prepend: site.baseurl | prepend: site.url | append: '/' }}">
+head back home</a> to try finding it again.</p>
