--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Chuck Lindblom
+subtitle: A Site For Tech News And General Hoop-La…
 use-site-title: true
 ---
 
